--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 </li>
 	</ul>  
 	</div>
+Website credit to <div id="navigation"><a href="index.html">Professor Dell</a> who's website (and HCI and Design course) shaped my view of Design.
 </body>
 </html>
