--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <div class="innerbox">
 	<p>Welcome to my website! </p>
 	<ul style="list-style-type:none;">
-	  <li> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. 
-</li>
-	  <li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. 
-</li>
+	<li> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. </li>
+	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  </li>
+	<li> During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </li>
+	<li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. </li>
 	</ul>  
 	</div>
 Website credit to <div id="navigation"><a href="index.html">Professor Dell</a> who's website (and HCI and Design course) shaped my view of Design.
