--- a/education.html
+++ b/education.html
@@ -18,15 +18,18 @@
 <div class="row">
   <div class="column"> 
     <center> Amherst College </center>
-    <p> Major: Computer Science and Asian Languages and Civilizations</p>
-    <p> Programming Languages: Java, Pyton </p>
-    <p> Natural Languages: Mandarin Chinese, Korean </p>
-    <p> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </p>
-    <br>
+<ul style="list-style-type:none;">
+    <li> Major: Computer Science and Asian Languages and Civilizations</li>
+    <lli> Programming Languages: Java, Pyton </li>
+    <li> Natural Languages: Mandarin Chinese, Korean </li>
+    <li> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </li>
+	  </ul>
+	<br>
     <center> Cornell Tech, Cornell University </center>
-    <p> Master's of Engineering in Computer Science </p>
-    <p> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </p>
-    <p> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </p>
+<ul style="list-style-type:none;">
+    <li> Master's of Engineering in Computer Science </li>
+    <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
+    <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
   </div>
   <div class="column">
   <img style="float: left; padding: 28px 50px 10px 50px;" src="graduaion.jpg" alt="" height="200px" />
