--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
 	<li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. </li>
 	</ul>  
 	</div>
-Website credit to <div id="navigation"><a href="https://www.nixdell.com/">Professor Dell</a>.
+Website credit to <a href="https://www.nixdell.com/">Professor Dell</a>.
 </html>
