--- a/education.html
+++ b/education.html
@@ -15,8 +15,6 @@
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
-<div class="row">
-  <div class="column"> 
     <center> Amherst College </center>
 <ul style="list-style-type:none;">
     <li> Major: Computer Science and Asian Languages and Civilizations</li>
@@ -30,12 +28,10 @@
     <li> Master's of Engineering in Computer Science </li>
     <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
-  </div>
-  <div class="column">
-  <img style="float: left; padding: 28px 50px 10px 50px;" src="graduaion.jpg" alt="" height="200px" />
+   <br>
+    <img style="float: left; padding: 28px 50px 10px 50px;" src="graduation.jpg" alt="" height="200px" />
     <img style="float: left; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="200px" />
-  </div>
-</div>
+
 	</div>
 </body>
 </html>
