--- a/education.html
+++ b/education.html
@@ -29,7 +29,7 @@
     <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
    <br>
-    <img style="float: left; padding: 28px 50px 10px 50px;" src="graduation.jpg" alt="" height="200px" />
+    <img style="float: left; padding: 28px 50px 10px 50px;" src="graduation.JPG" alt="" height="200px" />
     <img style="float: left; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="200px" />
 
 	</div>
