--- a/education.html
+++ b/education.html
@@ -18,7 +18,7 @@
     <center> Amherst College </center>
 <ul style="list-style-type:none;">
     <li> Major: Computer Science and Asian Languages and Civilizations</li>
-    <lli> Programming Languages: Java, Pyton </li>
+    <lli> Programming Languages: Java, Python </li>
     <li> Natural Languages: Mandarin Chinese, Korean </li>
     <li> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </li>
 	  </ul>
@@ -29,8 +29,8 @@
     <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
    <br>
-    <img style="float: left; padding: 28px 50px 10px 50px;" src="graduation.JPG" alt="" height="200px" />
-    <img style="float: left; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="200px" />
+    <img src="graduation.JPG" alt="" height="200px" />
+    <img src="Cornell Tech.jpeg" alt="" height="200px" />
 
 	</div>
 </body>
