--- a/education.html
+++ b/education.html
@@ -16,6 +16,7 @@
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
     <center> Amherst College </center>
+	    <img style="float: right; padding: 28px 50px 10px 50px;" src="graduation.JPG" alt="" height="100px" />
 <ul style="list-style-type:none;">
     <li> Major: Computer Science and Asian Languages and Civilizations</li>
     <lli> Programming Languages: Java, Python </li>
@@ -24,13 +25,12 @@
 	  </ul>
 	<br>
     <center> Cornell Tech, Cornell University </center>
+	    <img style="float: right; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="100px" />
 <ul style="list-style-type:none;">
     <li> Master's of Engineering in Computer Science </li>
     <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
    <br>
-    <img src="graduation.JPG" alt="" height="200px" />
-    <img src="Cornell Tech.jpeg" alt="" height="200px" />
 
 	</div>
 </body>
