--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
 <div class="innerbox">
     <center> Amherst College </center>
 	    <img style="float: right; padding: 28px 50px 10px 50px;" src="graduation.JPG" alt="" height="100px" />
-<ul style="list-style-type:none;">
+<ul style="list-style-type: square;">
     <li> Major: Computer Science and Asian Languages and Civilizations</li>
     <lli> Programming Languages: Java, Python </li>
     <li> Natural Languages: Mandarin Chinese, Korean </li>
@@ -26,7 +26,7 @@
 	<br>
     <center> Cornell Tech, Cornell University </center>
 	    <img style="float: right; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="100px" />
-<ul style="list-style-type:none;">
+<ul style="list-style-type: square;">
     <li> Master's of Engineering in Computer Science </li>
     <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
