--- a/work.html
+++ b/work.html
@@ -15,25 +15,51 @@
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
-<div class="row">
-  <div class="column"> 
-    <center> Amherst College </center>
-    <p> Major: Computer Science and Asian Languages and Civilizations</p>
-    <p> Programming Languages: Java, Pyton </p>
-    <p> Natural Languages: Mandarin Chinese, Korean </p>
-    <p> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </p>
-    <br>
-    <center> Cornell Tech, Cornell University </center>
-    <p> Master's of Engineering in Computer Science </p>
-    <p> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </p>
-    <p> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </p>
-  </div>
-  <div class="column">
-  <img style="float: left; padding: 28px 50px 10px 50px;" src="graduaion.jpg" alt="" height="200px" />
-    <img style="float: left; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="200px" />
-  </div>
+	<center> <strong> Internships </strong> </center>
+	<p> Institute for Creative Technologies at USC </p>
+	<ul style="list-style-type: square;">
+    <li> Research Undergraduate Intern (REU) Summer of 2014</li>
+    <li> I worked in the Natural Language Programming (NLP) and Natural Language Generation Group (NLG) </li>
+    <li> I developed the NLP and NLG the Virtual Human Neighbor, a virtual directory designed for internal use at USC to bring people closer together. </li>
+    <li> Personal Highlights: This was my first internship, my first time in California and my first time living on my own! </li>
+    <ul>
+	    <br>
+	<p> EventBank </p>
+	<ul style="list-style-type: square;">
+    <li> Backend Software Engineering Intern, Summer of 2015</li>
+    <li> EventBank is a SaaS company that helps corporations to build their own websites, connect with their customers, and plan events. </li>
+    <li> At the time, the backend team was a team of 3. I was tasked with solving the recent bugs, most notably, an issue with malformatted email templates. </li>
+    <li> Personal Highlights: This was my first-time working in Mandarin (and it wouldn't be my last!). I also fostered my interest in being the bridge between the business and technical as language was not the only barrier between the two groups. </li>
+    <ul>
+	    <br>
+	   	<p> Goldman Sachs, Hong Kong </p>
+	<ul style="list-style-type: square;">
+    <li> Technology Summer Analyst, Summer of 2016</li>
+    <li> I was the only developer in the project management group Cross-Division (XDIV) as the team transitioned to a more technical role. </li>
+    <li> I created an automated sign-off system, a long-term ask from the project management team. I also helped to start the design of a new data lake. </li>
+    <li> Personal Highlights: I absolutely loved the city of Hong Kong.  I also learned that I had a knack for "psuedo-tech" roles where I could stand in as the sole developer on the team to gather requirements AND implement solutions. </li>
+    <ul>
+	<br>
+	    <center> <strong> Full-Time </strong> </center>
+
+	    	<p> Avanade </p>
+	<ul style="list-style-type: square;">
+    <li> Technical Business Analyst, June 2017 - January 2019</li>
+    <li> I was in the Business Applications (BizApps) sector of Avanade aligned with Microsoft Dynamics 365 CRM </li>
+    <li> Depending on the project I held roles as a project manager, business analyst, and developer. My clients ranged from insurance, healthcare, and luxury jewelry. </li>
+    <li> Personal Highlights: At Avanade, I learned how much I liked solving technical problems, but I also enjoyed the client-facing side of my role. </li>
+    <ul>
+	    <br>
+	    	<p> Palantir Technologies </p>
+	<ul style="list-style-type: square;">
+    <li> Deployment Strategist, February 2019 to August 2020</li>
+    <li> I worked with clients across APAC (China, Indonesia, and Singapore) as part of Skywise, Palantir's venture with Airbus. </li>
+    <li> In the United States, I worked with a large railroad company in their Mechanical, Fuel and Engineering teams to develop tools to help guide their decision making.</li>
+    <li> Personal Highlights: Palantir showed me that I loved to solve all different kinds of problems.  I started to grow interested in product-facing development. </li>
+    <ul>
+
 </div>
-	</div>
+	
 </body>
 </html>
 
