--- a/work.html
+++ b/work.html
@@ -17,6 +17,8 @@
 <div class="innerbox">
 	<center> <strong> Internships </strong> </center>
 	<p> Institute for Creative Technologies at USC </p>
+	 <img style="float: right; padding: 28px 50px 10px 50px;" src="poster.JPG" alt="" height="100px" />
+	<br>
 	<ul style="list-style-type: square;">
     <li> Research Undergraduate Intern (REU) Summer of 2014</li>
     <li> I worked in the Natural Language Programming (NLP) and Natural Language Generation Group (NLG) </li>
@@ -25,14 +27,18 @@
     <ul>
 	    <br>
 	<p> EventBank </p>
+	   <img style="float: right; padding: 28px 50px 10px 50px;" src="anjesschina.JPG" alt="" height="100px" />
+	   <br>
 	<ul style="list-style-type: square;">
     <li> Backend Software Engineering Intern, Summer of 2015</li>
     <li> EventBank is a SaaS company that helps corporations to build their own websites, connect with their customers, and plan events. </li>
     <li> At the time, the backend team was a team of 3. I was tasked with solving the recent bugs, most notably, an issue with malformatted email templates. </li>
     <li> Personal Highlights: This was my first-time working in Mandarin (and it wouldn't be my last!). I also fostered my interest in being the bridge between the business and technical as language was not the only barrier between the two groups. </li>
     <ul>
-	    <br>
-	   	<p> Goldman Sachs, Hong Kong </p>
+ <br>
+	 <p> Goldman Sachs, Hong Kong </p>
+	<img style="float: right; padding: 28px 50px 10px 50px;" src="hongkongpic.JPG" alt="" height="100px" />
+<br>
 	<ul style="list-style-type: square;">
     <li> Technology Summer Analyst, Summer of 2016</li>
     <li> I was the only developer in the project management group Cross-Division (XDIV) as the team transitioned to a more technical role. </li>
@@ -43,6 +49,8 @@
 	    <center> <strong> Full-Time </strong> </center>
 
 	    	<p> Avanade </p>
+	    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="avanade.JPG" alt="" height="100px" />
+<br>
 	<ul style="list-style-type: square;">
     <li> Technical Business Analyst, June 2017 - January 2019</li>
     <li> I was in the Business Applications (BizApps) sector of Avanade aligned with Microsoft Dynamics 365 CRM </li>
@@ -51,6 +59,8 @@
     <ul>
 	    <br>
 	    	<p> Palantir Technologies </p>
+	    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="palantir.jpeg" alt="" height="100px" />
+<br>
 	<ul style="list-style-type: square;">
     <li> Deployment Strategist, February 2019 to August 2020</li>
     <li> I worked with clients across APAC (China, Indonesia, and Singapore) as part of Skywise, Palantir's venture with Airbus. </li>
