--- a/work.html
+++ b/work.html
@@ -24,17 +24,17 @@
     <li> I worked in the Natural Language Programming (NLP) and Natural Language Generation Group (NLG) </li>
     <li> I developed the NLP and NLG the Virtual Human Neighbor, a virtual directory designed for internal use at USC to bring people closer together. </li>
     <li> Personal Highlights: This was my first internship, my first time in California and my first time living on my own! </li>
-    <ul>
+    </ul>
 	    <br>
 	<p> EventBank </p>
-	   <img style="float: right; padding: 28px 50px 10px 50px;" src="anjesschina.JPG" alt="" height="100px" />
+	   <img style="float: right; padding: 28px 50px 10px 50px;" src="anjesschina.jpg" alt="" height="100px" />
 	   <br>
 	<ul style="list-style-type: square;">
     <li> Backend Software Engineering Intern, Summer of 2015</li>
     <li> EventBank is a SaaS company that helps corporations to build their own websites, connect with their customers, and plan events. </li>
     <li> At the time, the backend team was a team of 3. I was tasked with solving the recent bugs, most notably, an issue with malformatted email templates. </li>
     <li> Personal Highlights: This was my first-time working in Mandarin (and it wouldn't be my last!). I also fostered my interest in being the bridge between the business and technical as language was not the only barrier between the two groups. </li>
-    <ul>
+    </ul>
  <br>
 	 <p> Goldman Sachs, Hong Kong </p>
 	<img style="float: right; padding: 28px 50px 10px 50px;" src="hongkongpic.JPG" alt="" height="100px" />
@@ -44,7 +44,7 @@
     <li> I was the only developer in the project management group Cross-Division (XDIV) as the team transitioned to a more technical role. </li>
     <li> I created an automated sign-off system, a long-term ask from the project management team. I also helped to start the design of a new data lake. </li>
     <li> Personal Highlights: I absolutely loved the city of Hong Kong.  I also learned that I had a knack for "psuedo-tech" roles where I could stand in as the sole developer on the team to gather requirements AND implement solutions. </li>
-    <ul>
+    </ul>
 	<br>
 	    <center> <strong> Full-Time </strong> </center>
 
@@ -56,7 +56,7 @@
     <li> I was in the Business Applications (BizApps) sector of Avanade aligned with Microsoft Dynamics 365 CRM </li>
     <li> Depending on the project I held roles as a project manager, business analyst, and developer. My clients ranged from insurance, healthcare, and luxury jewelry. </li>
     <li> Personal Highlights: At Avanade, I learned how much I liked solving technical problems, but I also enjoyed the client-facing side of my role. </li>
-    <ul>
+    </ul>
 	    <br>
 	    	<p> Palantir Technologies </p>
 	    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="palantir.jpeg" alt="" height="100px" />
@@ -66,7 +66,7 @@
     <li> I worked with clients across APAC (China, Indonesia, and Singapore) as part of Skywise, Palantir's venture with Airbus. </li>
     <li> In the United States, I worked with a large railroad company in their Mechanical, Fuel and Engineering teams to develop tools to help guide their decision making.</li>
     <li> Personal Highlights: Palantir showed me that I loved to solve all different kinds of problems.  I started to grow interested in product-facing development. </li>
-    <ul>
+    </ul>
 
 </div>
 	
