--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
 	<ul style="list-style-type: square;">
     <li> Research Undergraduate Intern (REU) Summer of 2014</li>
     <li> I worked in the Natural Language Programming (NLP) and Natural Language Generation Group (NLG) </li>
-    <li> I developed the NLP and NLG the Virtual Human Neighbor, a virtual directory designed for internal use at USC to bring people closer together. </li>
+    <li> I developed the NLP and NLG the <a href="https://www.semanticscholar.org/paper/Creating-a-Virtual-Neighbor-Corbin-Morbini/c153433ab77097da0fb12d0539e6e297a35f4f0b">Virtual Human Neighbor</a> , a virtual directory designed for internal use at USC to bring people closer together. </li>
     <li> Personal Highlights: This was my first internship, my first time in California and my first time living on my own! </li>
     </ul>
 	    <br>
