--- a/interests.html
+++ b/interests.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<title> Carina's Corner </title>
+<link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
+<link rel="stylesheet" type="text/css" href="mystyle.css">	
+</head>
+<body>
+
+<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
+<div style="margin: 30px;">
+	<h1> Carina Corbin </h1>
+	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
+	 <p> carinabcorbin (at) gmail.com </p>
+</div>
+<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
+<div class="innerbox">
+    <center> Skills/Interests </center>
+<ul style="list-style-type: square;">
+    <li> Over the years, I have grown comfortable with the following programming languages: Java, Python, Pyspark, SQL, JavaScript, C#</li>
+    <li> I love learning languages. In addition to my native tongue English, I also speak Mandarin Chinese, Korean, and some Spanish! </li>
+    <li> I love going to the library, so you will often find me with a book in my bag.  I also love writing short stories (maybe one day it will be a novel!)  </li>
+    <li> Music is everything to me! I love to dance and previously played piano and guitar. I have these instruments at home, and don't practice as much as I should. </li>
+    <li> A recent pastime of mine has been cooking seemingly difficult recipes.  Some of my favorites have been mooncakes and Trinidian style roti! </li>
+    <img style="float: left; padding: 28px 50px 10px 50px;" src="roti.jpeg" alt="" height="100px" />
+    <img style="float: right; padding: 28px 50px 10px 50px;" src="mooncakes.jpeg" alt="" height="100px" />
+	  </ul>
+	</div>
+</body>
+</html>
