--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
 	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
-	 <p> carinabcorbin (at) gmail.com </p>
+	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
