--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<li> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. </li>
 	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  </li>
 	<li> During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </li>
-	<li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. </li>
+	<li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I  break down difficult problems and create technical solutions. </li>
 	</ul>  
 	</div>
 Website layout inspired by my HCI professor, to <a href="https://www.nixdell.com/">Professor Dell</a>.
