--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 <div class="innerbox">
 	<p>Welcome to my website! </p>
-	<ul style="list-style-type:none;">
+	<ul style="list-style-type:circle;">
 	<li> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. </li>
 	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  </li>
 	<li> During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </li>
