Added Cornell Tech interview

--- a/education.html
+++ b/education.html
@@ -30,6 +30,7 @@
     <li> Master's of Engineering in Computer Science </li>
     <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
+    <li> I talk more in detail about my experience at Cornell Tech through this featured article <a href="https://tech.cornell.edu/news/masters-qa-carina-corbin-computer-science-21">here</a>.</li>
    <br>
 
 	</div>
