Added article by Katba

--- a/work.html
+++ b/work.html
@@ -52,6 +52,7 @@
     <li> I was in the Business Applications (BizApps) sector of Avanade aligned with Microsoft Dynamics 365 CRM </li>
     <li> Depending on the project I held roles as a project manager, business analyst, and developer. My clients ranged from insurance, healthcare, and luxury jewelry. </li>
     <li> Personal Highlights: At Avanade, I learned how much I liked solving technical problems, but I also enjoyed the client-facing side of my role. </li>
+    <li> An Amherst alum, Carolina Katba, interviewed me while I was working at Avanade.  You can see the interview <a href="https://katba-caroline.com/carina-corbin-technical-business-analyst-at-avanade/"> here</a>.</li>
     </ul>
 	    <br>
 	    	<p> Palantir Technologies </p>
