Update education page

--- a/education.html
+++ b/education.html
@@ -10,28 +10,30 @@
 <div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
-	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
+	 <p> Software Developer, Stack Overflow </p>
 	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
-    <center> Amherst College </center>
-	    <img style="float: right; padding: 28px 50px 10px 50px;" src="graduation.JPG" alt="" height="100px" />
-<ul style="list-style-type: square;">
-    <li> Major: Computer Science and Asian Languages and Civilizations</li>
-    <lli> Programming Languages: Java, Python </li>
-    <li> Natural Languages: Mandarin Chinese, Korean </li>
-    <li> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </li>
-	  </ul>
-	<br>
     <center> Cornell Tech, Cornell University </center>
 	    <img style="float: right; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="100px" />
 <ul style="list-style-type: square;">
     <li> Master's of Engineering in Computer Science </li>
-    <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </li>
+    <li> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Natural Language Programming, Privacy in the Digital Age, Networks and Marketing </li>
     <li> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </li>
     <li> I talk more in detail about my experience at Cornell Tech through this featured article <a href="https://tech.cornell.edu/news/masters-qa-carina-corbin-computer-science-21">here</a>.</li>
    <br>
+    <center> Amherst College </center>
+	    <img style="float: right; padding: 28px 50px 10px 50px;" src="graduation.JPG" alt="" height="100px" />
+<ul style="list-style-type: square;">
+    <li> Major: Computer Science and Asian Languages and Civilizations</li>
+    <lli> CS Courses: Data Structures & Algorithms, Computer Systems, Advanced Operating Systems, Principles of Database Design, Machine Learning </li>
+    <li> Asian Lang & Civ Courses: Mandarin Chinese I-IV, Korean I-III, Business Korean 497, Power and Politics in Contemporary China, Perspecitive on Chinese History, Chinese Literature and Poetry</li>
+    <li> Natural Languages: Mandarin Chinese, Korean </li>
+    <li> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </li>
+	  </ul>
+	<br>
+
 
 	</div>
 </body>
