--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
-	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
-	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a>
+	 <p> Software Developer, Stack Overflow </p> 
+	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 	
 <div class="innerbox">
 	<p>Welcome to my website! </p>
 	<ul style="list-style-type:circle;">
-	<li> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. </li>
-	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  </li>
+	<li> I am a Software Developer at Stack Overflow. </li>
+	<li> I received my MEng in Computer Science from Cornell Tech, Cornell University where I focused on Security Principles, Optimizatioins and HCI & Design.
+	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir. </li>
 	<li> During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </li>
 	<li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I  break down difficult problems and create technical solutions. </li>
 	</ul>  
 	</div>
-Website layout inspired by my HCI professor, to <a href="https://www.nixdell.com/">Professor Dell</a>.
+Layout credit: <a href="https://www.nixdell.com/">Professor Dell</a>.
 </html>
