Updated work page

--- a/work.html
+++ b/work.html
@@ -10,8 +10,8 @@
 <div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
-	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
-	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a>
+	 <p> Software Developer, Stack Overflow </p> 
+	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
@@ -45,7 +45,7 @@
 	<br>
 	    <center> <strong> Full-Time </strong> </center>
 
-	    	<p> Avanade </p>
+	    	<p> Avanade</p>
 	    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="avanade.JPG" alt="" height="100px" />
 	<ul style="list-style-type: square;">
     <li> Technical Business Analyst, June 2017 - January 2019</li>
@@ -62,6 +62,12 @@
     <li> I worked with clients across APAC (China, Indonesia, and Singapore) as part of Skywise, Palantir's venture with Airbus. </li>
     <li> In the United States, I worked with a large railroad company in their Mechanical, Fuel and Engineering teams to develop tools to help guide their decision making.</li>
     <li> Personal Highlights: Palantir showed me that I loved to solve all different kinds of problems.  I started to grow interested in product-facing development. </li>
+    </ul>
+	    	<p> Stack Overflow </p>
+    <li> Software Developer, June 2021 - Present</li>
+    <li> I work on the Stack Overflow for Teams product specifically on our Discovery and Growth Team </li>
+    <li> I am currently tech leading our Search re-vamp to improve customer experience. I previously worked on Microsoft Teams v2 and the Dashboard v2.</li>
+    <li> Personal Highlights: Stack Overflow is my first completely remote job and showed me how to be user-driven while still maintaining work life balance. I am excited to grow at Stack Overflow and I am happy to have the opportunity to do so here. </li>
     </ul>
 
 </div>
