add SO blurb on work page

--- a/work.html
+++ b/work.html
@@ -64,6 +64,8 @@
     <li> Personal Highlights: Palantir showed me that I loved to solve all different kinds of problems.  I started to grow interested in product-facing development. </li>
     </ul>
 	    	<p> Stack Overflow </p>
+		    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="stack.jpeg" alt="" height="100px" />
+	<ul style="list-style-type: square;">
     <li> Software Developer, June 2021 - Present</li>
     <li> I work on the Stack Overflow for Teams product specifically on our Discovery and Growth Team </li>
     <li> I am currently tech leading our Search re-vamp to improve customer experience. I previously worked on Microsoft Teams v2 and the Dashboard v2.</li>
