Add GFM experience

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
-	 <p> Software Developer, Stack Overflow </p> 
+	 <p> Senior Software Engineer, GoFundMe x Classy</p> 
 	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
@@ -18,12 +18,12 @@
 <div class="innerbox">
 	<p>Welcome to my website! </p>
 	<ul style="list-style-type:circle;">
-	<li> I am a Software Developer at Stack Overflow. </li>
-	<li> I received my MEng in Computer Science from Cornell Tech, Cornell University where I focused on Security Principles, Optimizatioins and HCI & Design.
-	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir. </li>
+	<li> I am a Senior Software Engineer at GoFundMe x Classy. </li>
+	<li> I received my MEng in Computer Science from Cornell Tech at Cornell University where I focused on Security Principles, Optimizatioins and HCI & Design.
+	<li> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade, Palantir and Stack Overflow. </li>
 	<li> During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </li>
 	<li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I  break down difficult problems and create technical solutions. </li>
 	</ul>  
 	</div>
-Layout credit: <a href="https://www.nixdell.com/">Professor Dell</a>.
+Layout credit: My wonderful HCI & Design professor, <a href="https://www.nixdell.com/">Professor Dell</a>.
 </html>
