--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
 <div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
-	 <p> Software Developer, Stack Overflow </p> 
+	 <p> Senior Software Engineer, GoFundMe x Classy</p> 
 	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
@@ -66,10 +66,18 @@
 	    	<p> Stack Overflow </p>
 		    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="stack.jpeg" alt="" height="100px" />
 	<ul style="list-style-type: square;">
-    <li> Software Developer, June 2021 - Present</li>
+    <li> Software Developer, June 2021 - September 2023</li>
     <li> I work on the Stack Overflow for Teams product specifically on our Discovery and Growth Team </li>
     <li> I am currently tech leading our Search re-vamp to improve customer experience. I previously worked on Microsoft Teams v2 and the Dashboard v2.</li>
-    <li> Personal Highlights: Stack Overflow is my first completely remote job and showed me how to be user-driven while still maintaining work life balance. I am excited to grow at Stack Overflow and I am happy to have the opportunity to do so here. </li>
+    <li> Personal Highlights: Stack Overflow is my first completely remote job and showed me how to be user-driven while still maintaining work life balance. I was able to grow at Stack Overflow as a technical leader and build things I'm very proud of. </li>
+    </ul>
+	    	<p> GoFundMe x Classy </p>
+		    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="" alt="" height="100px" />
+	<ul style="list-style-type: square;">
+    <li> Software Developer, September 2023 - Present</li>
+    <li> I work at the intersection of GoFundMe and Classy, building solutions that help fundraisers achieve their goals and charities grow their communities </li>
+    <li> I started off working more on the Classy side, building solutions for charity admins. Now, I'm working on the GoFundMe side to inprove the experience of charities working with campaign organizers.  </li>
+    <li> Personal Highlights: I have really enjoyed working with non-profits. I love that the features are making a real impact -- empowering folks to help millions of others! </li>
     </ul>
 
 </div>
