--- a/interests.html
+++ b/interests.html
@@ -11,7 +11,7 @@
 <div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
-	 <p> Software Developer, Stack Overflow </p> 
+	<p> Senior Software Engineer, GoFundMe x Classy</p> 
 	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
 </div>
 <div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
@@ -22,9 +22,9 @@
     <li> I love learning languages. In addition to my native tongue English, I also speak Mandarin Chinese, Korean, and some Spanish! </li>
     <li> I love going to the library, so you will often find me with a book in my bag.  I also love writing short stories (maybe one day it will be a novel!)  </li>
     <li> Music is everything to me! I love to dance and previously played piano and guitar. I have these instruments at home, and don't practice as much as I should. </li>
-    <li> A recent pastime of mine has been cooking seemingly difficult recipes.  Some of my favorites have been mooncakes and Trinidian style roti! </li>
-    <img style="float: left; padding: 28px 50px 10px 50px;" src="roti.jpeg" alt="" height="100px" />
-    <img style="float: right; padding: 28px 50px 10px 50px;" src="mooncakes.jpeg" alt="" height="100px" />
+    <li> A recent pastime of mine has been cooking/baking seemingly difficult recipes. Some of my favorites have been mooncakes and Trinidian style roti! </li>
+    <img style="float: left; padding: 28px 50px 10px 50px;" src="roti.jpeg" alt="" height="200px" />
+    <img style="float: right; padding: 28px 50px 10px 50px;" src="mooncakes.jpeg" alt="" height="200px" />
 
 	  </ul>
 	</div>
