--- a/work.html
+++ b/work.html
@@ -72,12 +72,12 @@
     <li> Personal Highlights: Stack Overflow is my first completely remote job and showed me how to be user-driven while still maintaining work life balance. I was able to grow at Stack Overflow as a technical leader and build things I'm very proud of. </li>
     </ul>
 	    	<p> GoFundMe x Classy </p>
-		    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="gfmxclassy.jpg" alt="" height="100px" />
+		    	    <img style="float: right; padding: 28px 50px 10px 50px;" src="gfmxclassy.jpg" alt="" height="150px" />
 	<ul style="list-style-type: square;">
     <li> Software Developer, September 2023 - Present</li>
     <li> I work at the intersection of GoFundMe and Classy, building solutions that help fundraisers achieve their goals and charities grow their communities </li>
-    <li> I started off working more on the Classy side, building solutions for charity admins. Now, I'm working on the GoFundMe side to inprove the experience of charities working with campaign organizers.  </li>
-    <li> Personal Highlights: I have really enjoyed working with non-profits. I love that the features are making a real impact -- empowering folks to help millions of others! </li>
+    <li> I started off working more on the Classy side, building solutions for charity admins. Now, I'm working on the GoFundMe side to improve the experience of charities working with campaign organizers.  </li>
+    <li> Personal Highlights: I have really enjoyed working with non-profits. I love that the features are making a real impact -- saving and improving lives worldwide! </li>
     </ul>
 
 </div>
