--- a/work.html
+++ b/work.html
@@ -1,19 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title> Carina's Corner </title>
-<link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
-<link rel="stylesheet" type="text/css" href="mystyle.css">	
+    <script src="includeHTML.js"></script> <!-- Include the script -->
 </head>
 <body>
 
-<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
-<div style="margin: 30px;">
-	<h1> Carina Corbin </h1>
-	 <p> Senior Software Engineer, GoFundMe x Classy</p> 
-	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
-</div>
-<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
+<div include-html="header.html"></div>
+
 <div class="innerbox">
 	<center> <strong> Internships </strong> </center>
 	<p> Institute for Creative Technologies at USC </p>
