--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div include-html="header.html"></div>
-	
+<link rel="stylesheet" type="text/css" href="mystyle.css">	
 <div class="innerbox">
 	<p>Welcome to my website! </p>
 	<ul style="list-style-type:circle;">
