--- a/education.html
+++ b/education.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-    <script src="includeHTML.js"></script> <!-- Include the script -->
+    <title> Carina's Corner - Education </title>
+    <link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <script src="includeHTML.js"></script> 
 </head>
 <body>
 
