--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-    <script src="includeHTML.js"></script> <!-- Include the script -->
+    <title> Carina's Corner </title>
+    <link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <script src="includeHTML.js"></script> 
 </head>
 <body>
 
@@ -18,4 +21,5 @@
 	</ul>  
 	</div>
 Layout credit: My wonderful HCI & Design professor, <a href="https://www.nixdell.com/">Professor Dell</a>.
+</body>
 </html>
