--- a/interests.html
+++ b/interests.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div include-html="header.html"></div>
+<div class="box" include-html="header.html"></div>
 	
 <div class="innerbox">
     <center> Skills/Interests </center>
