Re-add navigation bar

--- a/interests.html
+++ b/interests.html
@@ -14,6 +14,7 @@
 	<p> Senior Software Engineer, GoFundMe x Classy</p> 
 	 <p> carinabcorbin (at) gmail.com </p> <a href="https://www.linkedin.com/in/carina-c-bab728b2/"><img src="linkedin-icon.png" alt="LinkedIn" height="30px"></a> <a href="https://github.com/ccorbin17/"><img src="github-icon.png" alt="GitHub" height="30px"></a>
 </div>
+<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 	
 <div class="innerbox">
     <center> Skills/Interests </center>
